--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Awesome Books</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <h3>Awesome books</h3>
+
+  <ul></ul>
+
+  <input type="text" name="title" id="" placeholder="Title"> <br>
+  <input type="text" name="author" id="" placeholder="Author">
+  <button>Add</button>
+
+  <script src="main.js"></script>
 </body>
 </html>
