Create array for booklist and add event listener

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
   <ul></ul>
 
-  <input type="text" name="title" id="" placeholder="Title"> <br>
-  <input type="text" name="author" id="" placeholder="Author">
-  <button>Add</button>
+  <input type="text" name="title" id="bookTitle" placeholder="Title"> <br>
+  <input type="text" name="author" id="bookAuthor" placeholder="Author"> <br>
+  <button id="addBtn">Add</button>
 
   <script src="main.js"></script>
 </body>
