Create a function to add a new book to the collection, with title and author

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h3>Awesome books</h3>
+  <div id="awesome-books">
+    <h1 class="p-3 text-center pt-3">Awesome books</h1>
 
-  <ul></ul>
+    <ul id="list"></ul>
 
-  <input type="text" name="title" id="bookTitle" placeholder="Title"> <br>
-  <input type="text" name="author" id="bookAuthor" placeholder="Author"> <br>
-  <button id="addBtn">Add</button>
-
+    <input type="text" placeholder="Title" id="book-title"> <br>
+    <input type="text" placeholder="Author"  id="book-author"> <br>
+    <button id="add-book">Add</button>
+  </div>
+  
   <script src="main.js"></script>
 </body>
 </html>
