Add style to new books

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="awesome-books">
-    <h1 class="p-3 text-center pt-3">Awesome books</h1>
+    <h1>Awesome books</h1>
 
     <ul id="list"></ul>
 
