--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 
     <ul id="list"></ul>
 
-    <input type="text" placeholder="Title" id="book-title"> <br>
-    <input type="text" placeholder="Author"  id="book-author"> <br>
-    <button id="add-book">Add</button>
+    <form>
+      <input type="text" placeholder="Title" id="book-title"> <br>
+      <input type="text" placeholder="Author"  id="book-author"> <br>
+      <button id="add-book">Add</button>
+    </form>
   </div>
   
   <script src="main.js"></script>
