Add style to inputs and add button

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <ul id="list"></ul>
 
     <form>
-      <input type="text" placeholder="Title" id="book-title"> <br>
-      <input type="text" placeholder="Author"  id="book-author"> <br>
-      <button id="add-book">Add</button>
+      <input type="text" class="form-control" placeholder="Title" id="book-title"> <br>
+      <input type="text" class="form-control" placeholder="Author"  id="book-author"> <br>
+      <button id="add-book" class="btn btn-success px-3">Add</button>
     </form>
   </div>
   
