Make inputs required

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <ul id="list"></ul>
 
     <form>
-      <input type="text" class="form-control" placeholder="Title" id="book-title"> <br>
-      <input type="text" class="form-control" placeholder="Author"  id="book-author"> <br>
+      <input type="text" class="form-control" placeholder="Title" id="book-title" required> <br>
+      <input type="text" class="form-control" placeholder="Author"  id="book-author" required> <br>
       <button id="add-book" class="btn btn-success px-3">Add</button>
     </form>
   </div>
