--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 </head>
 <body>
   <div id="awesome-books">
-    <h1>Awesome books</h1>
+    <h2 class="text-center my-4">All awesome books</h2>
 
     <ul id="list"></ul>
 
-    <form>
-      <input type="text" class="form-control" placeholder="Title" id="book-title" required> <br>
-      <input type="text" class="form-control" placeholder="Author"  id="book-author" required> <br>
-      <button id="add-book" class="btn btn-success px-3">Add</button>
+    <form class="w-50">
+      <h2 class="text-center my-4">Add a new book</h2>
+      <input type="text" class="form-control py-1" placeholder="Title" id="book-title" required> <br>
+      <input type="text" class="form-control py-1" placeholder="Author"  id="book-author" required> <br>
+      <button id="add-book" class="btn btn-success px-3 py-1 float-end">Add</button>
     </form>
   </div>
   
