--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+  <nav class="nav justify-content-between m-3 border border-secondary border-3 py-1 px-4">
+    <h3>Awesome Books</h3>
+    <ul class="nav justify-content-end nav-pills">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">List</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link " aria-disabled="true" href="#">Add new</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link " aria-disabled="true" href="#">Contact</a>
+      </li>
+    </ul>
+  </nav>
+
   <div id="awesome-books">
     <h2 class="text-center my-4">All awesome books</h2>
 
@@ -23,6 +40,7 @@
     </form>
   </div>
 
+  <!-- <footer><div class="border border-secondary border-3 py-2 px-4 m-3 fw-bold">Copyright 2021</div></footer> -->
   <script src="main.js"></script>
 </body>
 </html>
