--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </form>
   </div>
 
-  <!-- <footer><div class="border border-secondary border-3 py-2 px-4 m-3 fw-bold">Copyright 2021</div></footer> -->
+  <footer><div class="border border-secondary border-3 py-2 px-4 m-3 fw-bold">Copyright 2021</div></footer>
   <script src="main.js"></script>
 </body>
 </html>
