Add contact information section

--- a/index.html
+++ b/index.html
@@ -26,21 +26,32 @@
     </ul>
   </nav>
 
-  <div id="awesome-books">
-    <h2 class="text-center my-4">All awesome books</h2>
+  <section class="section-container">
+    <h2 class="text-center my-5">All awesome books</h2>
 
     <ul id="list"></ul>
 
-    <h2 class="text-center my-4">Add a new book</h2>
+    <h2 class="text-center my-5">Add a new book</h2>
 
     <form class="w-50">
       <input type="text" class="form-control py-1" placeholder="Title" id="book-title" required> <br>
       <input type="text" class="form-control py-1" placeholder="Author"  id="book-author" required> <br>
       <button id="add-book" class="btn btn-success px-3 py-1 float-end">Add</button>
     </form>
-  </div>
+  </section>
+
+  <section class="section-container">
+    <h2 class="text-center my-5">Contact Information</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque eum expedita necessitatibus id nam, ullam deleniti temporibus, rem eveniet quaerat deserunt dignissimos totam unde similique aperiam iure laborum tenetur.</p>
+    <ul>
+      <li>Lorem ipsum dolor sit amet.</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+      <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi, ea nulla.</li>
+    </ul>
+  </section>
 
   <footer><div class="border border-secondary border-3 py-2 px-4 m-3 fw-bold">Copyright 2021</div></footer>
+
   <script src="main.js"></script>
 </body>
 </html>
