--- a/index.html
+++ b/index.html
@@ -9,48 +9,52 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-  <nav class="nav justify-content-between m-3 border border-secondary border-3 py-1 px-4">
+  <nav class="nav justify-content-between border border-secondary border-3 py-2 px-4 m-3 fw-bold rounded-3">
     <h3>Awesome Books</h3>
     <ul class="nav justify-content-end nav-pills">
-      <li class="nav-item">
+      <li class="nav-item" id="list-btn">
         <a class="nav-link active" aria-current="page" href="#">List</a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link " aria-disabled="true" href="#">Add new</a>
+      <li class="nav-item" id="add-btn">
+        <a class="nav-link" aria-disabled="true" href="#">Add new</a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link " aria-disabled="true" href="#">Contact</a>
+      <li class="nav-item" id="contact-btn">
+        <a class="nav-link" aria-disabled="true" href="#">Contact</a>
       </li>
     </ul>
   </nav>
 
-  <section class="section-container">
-    <h2 class="text-center my-5">All awesome books</h2>
+  <main class="section-container">
+    <section class="section-1">
+      <h2 class="text-center my-5">All awesome books</h2>
+  
+      <ul id="list"></ul>
+    </section>
 
-    <ul id="list"></ul>
+    <section class="section-2 hide">
+      <h2 class="text-center my-5">Add a new book</h2>
+  
+      <form class="w-50">
+        <input type="text" class="form-control py-1" placeholder="Title" id="book-title" required> <br>
+        <input type="text" class="form-control py-1" placeholder="Author"  id="book-author" required> <br>
+        <button id="add-book" class="btn btn-success px-3 py-1 float-end">Add</button>
+      </form>
+    </section>
 
-    <h2 class="text-center my-5">Add a new book</h2>
+    <section class="section-3 hide">
+      <h2 class="text-center my-5">Contact Information</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque eum expedita necessitatibus id nam, ullam deleniti temporibus, rem eveniet quaerat deserunt dignissimos totam unde similique aperiam iure laborum tenetur.</p>
+      <ul>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi, ea nulla.</li>
+      </ul>
+    </section>
+  </main>
 
-    <form class="w-50">
-      <input type="text" class="form-control py-1" placeholder="Title" id="book-title" required> <br>
-      <input type="text" class="form-control py-1" placeholder="Author"  id="book-author" required> <br>
-      <button id="add-book" class="btn btn-success px-3 py-1 float-end">Add</button>
-    </form>
-  </section>
-
-  <section class="section-container">
-    <h2 class="text-center my-5">Contact Information</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque eum expedita necessitatibus id nam, ullam deleniti temporibus, rem eveniet quaerat deserunt dignissimos totam unde similique aperiam iure laborum tenetur.</p>
-    <ul>
-      <li>Lorem ipsum dolor sit amet.</li>
-      <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-      <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi, ea nulla.</li>
-    </ul>
-  </section>
-
-  <footer><div class="border border-secondary border-3 py-2 px-4 m-3 fw-bold">Copyright 2021</div></footer>
+  <footer><div class="border border-secondary border-3 py-2 px-4 m-3 fw-bold rounded-3">Copyright 2021</div></footer>
 
   <script src="main.js"></script>
 </body>
