--- a/index.html
+++ b/index.html
@@ -9,33 +9,33 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-  <nav class="nav justify-content-between border border-secondary border-3 py-2 px-4 m-3 fw-bold rounded-3">
+  <nav class="nav justify-content-between m-3 border border-secondary border-3 py-1 px-4 rounded-3">
     <h3>Awesome Books</h3>
-    <ul class="nav justify-content-end nav-pills">
+    <ul class="nav justify-content-end nav-pills tabs">
       <li class="nav-item" id="list-btn">
-        <a class="nav-link active" aria-current="page" href="#">List</a>
+        <a class="nav-link" aria-current="page" href="#">List</a>
       </li>
 
       <li class="nav-item" id="add-btn">
-        <a class="nav-link" aria-disabled="true" href="#">Add new</a>
+        <a class="nav-link " aria-disabled="true" href="#">Add new</a>
       </li>
 
       <li class="nav-item" id="contact-btn">
-        <a class="nav-link" aria-disabled="true" href="#">Contact</a>
+        <a class="nav-link " aria-disabled="true" href="#">Contact</a>
       </li>
     </ul>
   </nav>
 
-  <main class="section-container">
+  <main id="awesome-books">
     <section class="section-1">
       <h2 class="text-center my-5">All awesome books</h2>
-  
+
       <ul id="list"></ul>
     </section>
 
     <section class="section-2 hide">
       <h2 class="text-center my-5">Add a new book</h2>
-  
+
       <form class="w-50">
         <input type="text" class="form-control py-1" placeholder="Title" id="book-title" required> <br>
         <input type="text" class="form-control py-1" placeholder="Author"  id="book-author" required> <br>
@@ -45,6 +45,7 @@
 
     <section class="section-3 hide">
       <h2 class="text-center my-5">Contact Information</h2>
+
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque eum expedita necessitatibus id nam, ullam deleniti temporibus, rem eveniet quaerat deserunt dignissimos totam unde similique aperiam iure laborum tenetur.</p>
       <ul>
         <li>Lorem ipsum dolor sit amet.</li>
@@ -54,7 +55,9 @@
     </section>
   </main>
 
+
   <footer><div class="border border-secondary border-3 py-2 px-4 m-3 fw-bold rounded-3">Copyright 2021</div></footer>
+
 
   <script src="main.js"></script>
 </body>
