--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     </ul>
   </nav>
 
+  <div id="currentDate"></div>
+
   <main id="awesome-books">
     <section class="section-1">
       <h2 class="text-center my-5">All awesome books</h2>
@@ -60,5 +62,6 @@
 
 
   <script src="main.js"></script>
+  <script src="https://moment.github.io/luxon/global/luxon.min.js"></script> 
 </body>
 </html>
